--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
                       <h3 class="skills__name">C++</h3>
                     </div>
                 </div>
+                <div class="skills__data">
+                    <div class="skills__titles">
+                      <h3 class="skills__name">HTML</h3>
                 
                 
               </div>
