--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">08.30+</span>
+                <span class="about__info-title">08.90+</span>
                 <span class="about__info-name">Aggregate <br />CGPA</span>
               </div>
 
@@ -302,7 +302,7 @@
                 </div>
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">MSSQL</h3>
+                    <h3 class="skills__name">Apache</h3>
                   </div>
                   
                 </div>
@@ -346,7 +346,7 @@
                 <div>
                   <h3 class="qualification__title">SSC</h3>
                   <span class="qualification__subtitle"
-                    >V.V <br />High School</span
+                    >Vidya Vihar <br />High School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
