--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body oncontextmenu="return false">
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Sabari Gireesh</a>
+        <a href="#" class="nav__logo">Arun Kumar</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
@@ -67,7 +67,7 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/in/"
+                href="https://www.linkedin.com/in/arunkumar9121"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -114,7 +114,7 @@
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, I'm Sabari Gireesh</h1>
+              <h1 class="home__title">Hi, I'm Arun Kumar</h1>
               <h3 class="home__subtitle">
                 Computer Science Engineering Student
               </h3>
@@ -149,7 +149,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              I'm a third-year cSE undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
+              I'm a third-year CSE undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
             </p>
 
             <div class="about__info">
@@ -346,7 +346,7 @@
                 <div>
                   <h3 class="qualification__title">SSC</h3>
                   <span class="qualification__subtitle"
-                    >Vidya Vihar <br />High School</span
+                    >Balaji Vidya Mandhir <br />High School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -439,7 +439,7 @@
                           <i
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
-                          <p>Scored 93.5%</p>
+                          <p>Scored 52%</p>
                         </li>
                       </ul>
                     </div>
@@ -482,7 +482,7 @@
                           <i
                             class="uil uil-check-circle services__modal-icon"
                           ></i>
-                          <p>Scored an aggregate of 8.94 CGPA till now.</p>
+                          <p>Scored an aggregate of 7.5 CGPA till now.</p>
                         </li>
                         
                       </ul>
@@ -513,7 +513,7 @@
               <div>
                 <h3 class="contact__title">Contact Me</h3>
                 <span class="contact__subtitle"
-                  ><a href="tel:6362243314"></a>+91 7382505430</span
+                  ><a href="tel:6362243314"></a>+91 9121914954</span
                 >
               </div>
             </div>
@@ -524,7 +524,7 @@
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"
-                  >gireeshrocky0@gmail.com</span
+                  >arunkumargudi9@gmail.com</span
                 >
               </div>
             </div>
@@ -567,7 +567,7 @@
 
             <div>
               <a
-                href=" mailto: gireeshrocky0@gmail.com?subject=Testing out mailto! &body=This is only a test!"
+                href=" mailto: arunkumargudi9@gmail.com?subject=Testing out mailto! &body=This is only a test!"
                 class="button button--flex"
               >
                 Send Message
@@ -584,7 +584,7 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Sabari Gireesh</h1>
+            <h1 class="footer__title">Arun Kumar</h1>
             <span class="footer__subtitle"
               >Computer Science Engineering Student</span
             >
@@ -601,7 +601,7 @@
 
           <div class="footer__socials">
             <a
-              href="https://www.instagram.com/rockster_gireesh/"
+              href="https://www.instagram.com/itszzzz__arun/"
               class="footer__social"
               target="__blank"
             >
@@ -610,7 +610,7 @@
           </div>
         </div>
 
-        <p class="footer__copy">&#169; Sabari Gireesh. All right reserved</p>
+        <p class="footer__copy">&#169; Arun Kumar. All right reserved</p>
       </div>
     </footer>
 
