--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
 
               <a
-                href="https://github.com/"
+                href="https://github.com/arunkumar"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -154,7 +154,7 @@
 
             <div class="about__info">
               <div>
-                <span class="about__info-title">08.80+</span>
+                <span class="about__info-title">70+</span>
                 <span class="about__info-name">Aggregate <br />CGPA</span>
               </div>
 
