--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </a>
 
               <a
-                href="https://github.com/arunkumar"
+                href="https://github.com/arunkumarilove you"
                 target="_blank"
                 class="home__social-icon"
               >
