--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body oncontextmenu="return false">
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">Arun Kumar</a>
+        <a href="#" class="nav__logo">Lakshmi Prasanna</a>
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
@@ -114,7 +114,7 @@
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, I'm Arun Kumar</h1>
+              <h1 class="home__title">Hi, I'm Lakshmi Prasanna</h1>
               <h3 class="home__subtitle">
                 Computer Science Engineering Student
               </h3>
@@ -524,7 +524,7 @@
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"
-                  >arunkumargudi9@gmail.com</span
+                  >pinnamsettyprasanna@gmail.com</span
                 >
               </div>
             </div>
