--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     class="home__blob-img"
                     x="-79"
                     y="-46"
-                    xlink:href="assets/img/pro.jpg"
+                    xlink:href="assets/img/about.jpg"
                   />
                 </g>
               </svg>
@@ -116,11 +116,11 @@
             <div class="home__data">
               <h1 class="home__title">Hi, I'm Lakshmi Prasanna</h1>
               <h3 class="home__subtitle">
-                Computer Science Engineering Student
+                Advanced BCA Student
               </h3>
               <p class="home__description">
-                A third-year undergraduate engineering student at
-                <strong>p.B.R. Visvodaya institute of technology and science </strong>, Kavali.
+                A third-year undergraduate student at
+                <strong>Krishna chaitanya Jr college </strong>, Nellore.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
@@ -145,11 +145,11 @@
         <span class="section__subtitle">My introduction</span>
 
         <div class="about__container container grid">
-          <img src="assets\img\about.jpg" alt="" class="about__img" />
+          <img src="assets\img\pro.jpg" alt="" class="pro__img" />
 
           <div class="about__data">
             <p class="about__description">
-              I'm a third-year CSE undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
+              I'm a third-year BCA undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
             </p>
 
             <div class="about__info">
