--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
           </div>
         </div>
 
-        <p class="footer__copy">&#169; Arun Kumar. All right reserved</p>
+        <p class="footer__copy">&#169; Lakshmi Prasanna. All right reserved</p>
       </div>
     </footer>
 
