--- a/index.html
+++ b/index.html
@@ -584,9 +584,9 @@
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Arun Kumar</h1>
+            <h1 class="footer__title">Lakshmi Prasanna</h1>
             <span class="footer__subtitle"
-              >Computer Science Engineering Student</span
+              >Advanced BCA Student</span
             >
           </div>
 
